[gd_scene load_steps=3 format=3 uid="uid://bvm4twi02rja5"]

[ext_resource type="PackedScene" uid="uid://dee7x2rlbq6mo" path="res://assets/mech/mech_v3.glb" id="1_h7vm2"]
[ext_resource type="Script" path="res://assets/mech/mech.gd" id="2_ftuo8"]

[node name="mech_v3" instance=ExtResource("1_h7vm2")]
script = ExtResource("2_ftuo8")

[node name="bullet_spawn_l" type="Node3D" parent="body/weapon_l" index="0"]
transform = Transform3D(1, -8.82181e-10, 2.32831e-10, 4.46505e-11, 1, 0, 0, 0, 1, 2.20086, -0.228936, 0)

[node name="bullet_spawn_r" type="Node3D" parent="body/weapon_r" index="0"]
transform = Transform3D(1, -1.8135e-09, 4.65661e-10, 4.46505e-11, 1, 0, 0, 0, 1, 1.50017, -0.201525, 0.0417595)

[node name="legs" parent="." index="1"]
visible = false

[node name="reload_timer" type="Timer" parent="." index="2"]
one_shot = true

[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
